# ghost_in_a_shell

./: Cargo.toml  flake.nix  rust-toolchain.toml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/host/: Cargo.toml
crates/host/src/: main.rs  terminal.rs  vm.rs
crates/host/src/terminal/: backend.rs  colors.rs  input.rs  io.rs  mod.rs  plugin.rs  render.rs  state.rs  styled_text.rs
crates/message_protocol/: Cargo.toml
crates/message_protocol/src/: protocol.rs  vsock.rs
guest/: base.nix
guest/pkgs/: ghost-agent.nix  story-agent.nix
modules/: devshell.nix  guest-artifacts.nix  guests.nix  packages.nix  systems.nix
modules/nixos/: guest-base.nix
pkgs/: story-agent.nix
