[package]
name = "ghost-ina-shell"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ghost-ina-shell"
path = "src/bin/ghost-ina-shell.rs"

[[bin]]
name = "ghost-agent"
path = "src/bin/ghost-agent.rs"

[dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
bevy = "0.18"
alacritty_terminal = "0.26"
portable-pty = "0.9"
crossbeam-channel = "0.5"
anyhow = "1"
arboard = "3.6"
parking_lot = "0.12"
