[package]
name = "host"
version = "0.1.0"
edition = "2024"

[profile.dev.package.wgpu-types]
debug-assertions = false

[dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
bevy = { version = "0.18", default-features = true, features = [
  "bevy_winit",
  "bevy_render",
  "bevy_pbr",
  "bevy_core_pipeline",
  "bevy_ui_render",
  "bevy_animation",
  "bevy_text",
  "bevy_asset",
  "bevy_sprite_render",
  "bevy_scene",
  "bevy_state",
  "bevy_gltf",
  "multi_threaded",
  "png",
  "webgl2",
  "tonemapping_luts",
  "zstd_c",
  # gh actions runners don't like wayland
  "x11",
  "wayland"
] }
alacritty_terminal = "0.26"
portable-pty = "0.9"
crossbeam-channel = "0.5"
anyhow = "1"
arboard = "3.6"
parking_lot = "0.12"
message_protocol = { path = "../message_protocol/"}
